--- a/src/index.css
+++ b/src/index.css
@@ -163,34 +163,25 @@ input {
   cursor: pointer;
   user-select: none;
   touch-action: manipulation;
-  transition: all 1s ease-in-out;
+  transition: all .8s ease-in-out;
 }
 .speed-btn:active,
 .speed-btn:hover {
   outline: 0;
   transform: scale(1.3);
 }
-
-.timezone-wrapper {
-  display: flex;
-  flex-direction: column;
-  margin-top: 10px;
-  width: 100%;
+.timezones{
+ margin-left:75px;
+}
+.list-of-timezones{
+max-width:385px;
+}
+.london, .newyorkcity, .denver{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.timezone-row {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin: 4px;
-  font-weight: bold;
-}
-.timezone-row>span {
-  font-weight: normal;
-  margin-right: 20px;
-}
-.timezone-heading {
-  display: flex;
-  justify-content: flex-end;
-  width: 50%;
+.london>p {
+margin-right:5px;
 }
